Add download buttons, improve help

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,13 @@
 .page-bg-img {
-	height: 90vh;
+	height: 70vh;
 	max-height: 200rem;
 	width: 100vw;
 	overflow: hidden;
-	z-index: -1;
+	z-index: -2;
 	position: absolute;
 	left: 0;
 	top: 0;
+	filter: brightness(50%);
 }
 
 nav {
@@ -27,7 +28,7 @@ nav > button {
 	background: none;
 	font-size: 1em;
 	font-weight: 300;
-	margin-inline: 0.5em;
+	margin-inline: 0.75em;
 }
 
 nav :first-child {
@@ -88,9 +89,12 @@ body {
 	color: white;
 	display: flex;
 	flex-direction: column;
-	margin: 4em;
-	margin-bottom: 40vh;
 	font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+	justify-content: center;
+	justify-items: center;
+	margin-top: 10em;
+	margin-bottom: 10em;
+	margin-inline: 6em;
 }
 
 .hero > h1 {
@@ -110,14 +114,27 @@ body {
 	color: white;
 	background-color: #f44336;
 	padding: 1em;
-	padding-inline: 1.75em;
-	border-radius: 0.25em;
-	width: 8em;
+	padding-inline: 1.5em;
+	border-radius: 0.5em;
+	width: 10em;
 	text-align: center;
 	justify-content: center;
 	align-content: center;
 	align-items: center;
 	margin-top: 2em;
+	cursor: pointer;
+}
+
+.hero > a > svg {
+	padding-inline: 0.25em;
+}
+
+.hero > a:hover {
+	box-shadow:
+		0 14px 26px -12px rgba(244, 67, 54, 0.42),
+		0 4px 23px 0px rgba(0, 0, 0, 0.12),
+		0 8px 10px -5px rgba(244, 67, 54, 0.2);
+	background-color: #f44336;
 }
 
 .product-grid {
@@ -128,6 +145,12 @@ body {
 	max-width: 75em;
 }
 
+@media (max-width: 50em) {
+	.product-grid {
+		grid-template-columns: 1fr;
+	}
+}
+
 .product-grid > .product {
 	padding: 2em;
 	padding-inline: 4em;
@@ -135,6 +158,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	align-self: flex-start;
 }
 
 .product-grid > .product > img {
@@ -165,14 +189,14 @@ body {
 	width: 90%;
 }
 
-.product-privacy-policies {
+.product-vertical-list {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
 	padding: 2em;
 }
 
-.product-privacy-policies > .product {
+.product-vertical-list > .product {
 	display: flex;
 	flex-direction: row;
 	max-width: 100%;
@@ -180,7 +204,7 @@ body {
 	margin-bottom: 4em;
 }
 
-.product-privacy-policies > .product:last-of-type {
+.product-vertical-list > .product:last-of-type {
 	display: flex;
 	flex-direction: row;
 	max-width: 100%;
@@ -188,31 +212,56 @@ body {
 	margin-bottom: 2em;
 }
 
-.product-privacy-policies > .product > :first-child {
+.product-vertical-list > .product > :first-child {
 	max-width: 24em;
 	margin-right: 4em;
 }
 
-.product-privacy-policies > .product > :last-child {
+.product-vertical-list > .product > :last-child {
 	width: 75%;
 	flex-grow: 1;
 	text-align: left;
 }
 
-.product-privacy-policies > .product > * > img {
+.product-vertical-list > .product > * > img {
 	object-fit: contain;
 	width: 100%;
 	height: auto;
 }
 
-.product-privacy-policies > .product > * > h2 {
+.product-vertical-list > .product > * > h2 {
 	margin: 0;
 	padding: 0;
 }
 
-.product-privacy-policies > .product > * > h3 {
+.product-vertical-list > .product > * > h3 {
 	margin-top: 0;
 	padding-top: 0;
+}
+
+.product-vertical-list h4,
+.product-vertical-list li {
+	font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+}
+
+.product-vertical-list li {
+	font-weight: 300;
+	line-height: 1.5em;
+}
+
+.product-vertical-list > .product > div > ol {
+	margin-top: 0.25em;
+	margin-bottom: 1em;
+}
+
+.product-vertical-list > .product > div > h4 {
+	margin: 0;
+}
+
+.product-vertical-list .alert {
+	margin-bottom: 2em;
+	font-weight: bold;
+	color: #a61207;
 }
 
 .center-horizontal {
