--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+	font-weight: 300;
+}
 .page-bg-img {
 	height: 70vh;
 	max-height: 200rem;
@@ -200,8 +204,8 @@ body {
 	display: flex;
 	flex-direction: row;
 	max-width: 100%;
-	border-bottom: solid 4px #3c4858;
-	margin-bottom: 4em;
+	border-bottom: solid 2px #66696d;
+	margin-bottom: 2em;
 }
 
 .product-vertical-list > .product:last-of-type {
@@ -225,18 +229,23 @@ body {
 
 .product-vertical-list > .product > * > img {
 	object-fit: contain;
-	width: 100%;
+	width: 80%;
 	height: auto;
 }
 
 .product-vertical-list > .product > * > h2 {
 	margin: 0;
 	padding: 0;
+	font-weight: 400;
+	font-size: 1.25em;
 }
 
 .product-vertical-list > .product > * > h3 {
 	margin-top: 0;
 	padding-top: 0;
+	padding-bottom: 1em;
+	font-weight: 300;
+	font-size: 0.9em;
 }
 
 .product-vertical-list h4,
