--- a/static/styles.css
+++ b/static/styles.css
@@ -14,7 +14,14 @@ body {
 	position: absolute;
 	left: 0;
 	top: 0;
+}
+
+.b-50 {
 	filter: brightness(50%);
+}
+
+.b-75 {
+	filter: brightness(75%);
 }
 
 nav {
@@ -198,6 +205,34 @@ body {
 .product-grid > .product > a > img {
 	height: 100%;
 	width: auto;
+}
+
+.article-grid {
+	display: grid;
+	gap: 1em;
+	grid-template-columns: 1fr 1fr;
+	text-align: center;
+	max-width: 75em;
+}
+
+.article-grid > .article {
+	padding: 2em;
+	padding-inline: 4em;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	align-self: flex-start;
+	text-decoration: none;
+	color: inherit;
+	border: solid 2px #66696d;
+	padding: 0;
+}
+
+.article-grid > .article > img {
+	width: 80%;
+	height: auto;
+	padding-bottom: 0.25em;
 }
 
 .img-rounded {
